[package]
name = "analyze"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
mail-parser = "0.9.3"
mbox-reader = "0.2.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
counter = "0.6"
chrono = { version = "0.4", features = ["serde"] }
